--- a/friends.html
+++ b/friends.html
@@ -107,7 +107,7 @@
     </div>
 
     <div id="no-mobile">
-      <span>Your Screen is too big</span>
+      <span>Your Screen is super big</span>
     </div>
 
     <script
