--- a/find.html
+++ b/find.html
@@ -74,7 +74,7 @@
             <div class="Open-Chat__Info">
               <img
                 class="Open-Chat__personal-photo"
-                src="C:\Users\Stven\Desktop\KakaoTalk_20241214_013908250.jpg"
+                src="KakaoTalk_20241214_013908250.jpg"
               />
               <div class="Open-Chat__number">802 members</div>
               <div class="divider"></div>
@@ -85,7 +85,7 @@
           <div class="Open-Chat__column">
             <img
               class="Open-Chat__photo"
-              src="C:\Users\Stven\Desktop\KakaoTalk_20241214_013908250.jpg"
+              src="KakaoTalk_20241214_013908250.jpg"
             />
             <div class="Open-Chat__likes">
               <i class="fa-solid fa-heart"></i>
@@ -101,7 +101,7 @@
             <div class="Open-Chat__Info">
               <img
                 class="Open-Chat__personal-photo"
-                src="C:\Users\Stven\Desktop\KakaoTalk_20241214_013908250.jpg"
+                src="KakaoTalk_20241214_013908250.jpg"
               />
               <div class="Open-Chat__number">299 members</div>
               <div class="divider"></div>
@@ -112,7 +112,7 @@
           <div class="Open-Chat__column">
             <img
               class="Open-Chat__photo"
-              src="C:\Users\Stven\Desktop\KakaoTalk_20241214_013908250.jpg"
+              src="KakaoTalk_20241214_013908250.jpg"
             />
             <div class="Open-Chat__likes">
               <i class="fa-solid fa-heart"></i>
