--- a/chats.html
+++ b/chats.html
@@ -37,7 +37,7 @@
         <div class="user-component" href="#">
           <div class="user-component__column chat-user-component__column">
             <img
-              src="C:\Users\Stven\Desktop\KakaoTalk_20241214_013908250.jpg"
+              src="KakaoTalk_20241214_013908250.jpg"
               class="user-component__avatar"
             />
             <div class="user-component__text">
@@ -81,6 +81,10 @@
         </li>
       </ul>
     </nav>
+
+    <div id="no-mobile">
+      <span>Your Screen is too big</span>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/eab41a873d.js"
