--- a/chatting.html
+++ b/chatting.html
@@ -38,7 +38,7 @@
     <main class="main-screen main-chat">
       <div class="chat__timestamp">Tuesday, June 30, 2020</div>
       <div class="message-row">
-        <img src="C:\Users\Stven\Desktop\KakaoTalk_20241214_013908250.jpg" />
+        <img src="KakaoTalk_20241214_013908250.jpg" />
         <div class="message-row__content">
           <span class="message__author">Giant Soondoong</span>
           <div class="message__info">
