--- a/friends.html
+++ b/friends.html
@@ -39,7 +39,7 @@
       <a class="user-component" href="#">
         <div class="user-component__column">
           <img
-            src="C:\Users\Stven\Desktop\KakaoTalk_20241214_013908250.jpg"
+            src="KakaoTalk_20241214_013908250.jpg"
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
@@ -57,7 +57,7 @@
         <a class="user-component" href="#">
           <div class="user-component__column">
             <img
-              src="C:\Users\Stven\Desktop\KakaoTalk_20241214_013908250.jpg"
+              src="KakaoTalk_20241214_013908250.jpg"
               class="user-component__avatar user-component__avatar--sm"
             />
             <div class="user-component__text">
